[package]
name = "ics-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
ics2000-rs = { path = "../ics2000-rs" }
serde = "1.0.152"
serde_json = "1.0.94"
tokio = { version = "1.26.0", features = ["full"] }
